# imi

./: .gitignore  CMakeLists.txt  README.md
src/: defmenu.c  defmenu.h  imi.c  menu.c  menu.h  menuarray.c  menuarray.h  parse.c  parse.h  word.c  word.h  worddef.c  worddef.h  wordmenu.c  wordmenu.h
